--- a/src/SIS.Prometheus.csproj
+++ b/src/SIS.Prometheus.csproj
@@ -28,7 +28,7 @@
 
     <!-- Used in lieu of a Primary Interop Assembly (PIA) -->
     <ItemGroup>
-      <Compile Include="../contract/**/*.cs" />
+      <Compile Include="../Contract/**/*.cs" />
     </ItemGroup>
 
     <Target Name="ServerUsage" AfterTargets="Build">
