--- a/src/SIS.Prometheus.csproj
+++ b/src/SIS.Prometheus.csproj
@@ -34,8 +34,8 @@
     <Target Name="ServerUsage" AfterTargets="Build">
       <Message Importance="High" Text="%0a************************************%0a*** $(MSBuildProjectName) usage instructions ***%0a************************************" />
       <Message Importance="High" Text="The server must be COM registered in order to activate.%0aThe following commands must be executed from an elevated command prompt." />
-      <Message Importance="High" Text="Register:%0a    regsvr32.exe &quot;$(ProjectDir)$(OutputPath)$(ComHostFileName)&quot;" />
-      <Message Importance="High" Text="Unregister:%0a    regsvr32.exe /u &quot;$(ProjectDir)$(OutputPath)$(ComHostFileName)&quot;" />
+      <Message Importance="High" Text="Register:%0a    regsvr32.exe &quot;$(OutputPath)$(ComHostFileName)&quot;" />
+      <Message Importance="High" Text="Unregister:%0a    regsvr32.exe /u &quot;$(OutputPath)$(ComHostFileName)&quot;" />
     </Target>
 
 </Project>
