--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,7 +6,19 @@ on:
       - v[0-9]+.[0-9]+.[0-9]+
 
 permissions:
+  actions: read
+  checks: read
   contents: write
+  deployments: read
+  id-token: read
+  issues: read
+  discussions: read
+  packages: read
+  pages: read
+  pull-requests: read
+  repository-projects: read
+  security-events: read
+  statuses: read
 
 jobs:
   build:
